[package]
name = "raiden-sqs-test-suite"
version = "0.0.0"
authors = ["Yuki Kodama <endflow.net@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
raiden-sqs = { version = "*", path = "../raiden-sqs" }
serde = { version = "^1.0.188", features = ["derive"] }
serde_json = "^1"

[dev-dependencies]
trybuild = "^1"
